ollama/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openwebui
  namespace: final
spec:
  serviceName: "openwebui"
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: openwebui-data
          mountPath: /app/backend/data

  volumeClaimTemplates:
  - metadata:
      name: openwebui-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
