ollama/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui 
  namespace: final
spec:
  selector:
    app: openwebui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
